@@ -15,6 +15,7 @@
 	gc : prevent issues with AV softs / GoogleDesktop which inject threads
 	vm : use sse2 for fp calculus on gcc (double precision, same as msvc/flash)
 	mysql : added result_set_conv_string/result_set_conv_bytes
+	mysql : added support for BINARY(size) type
 
 2009-07-26 : 1.8.1
 	nekoc : small fix in evaluation of using jump tables for switch on integers
